# the-modern-cpp-challenge

./: .gitignore  README.md
src/language_features/container_add/: CMakeLists.txt  container_add_test.cc
src/language_features/container_query/: CMakeLists.txt  container_query_test.cc
src/language_features/ipv4_data_type/: CMakeLists.txt  IPv4.cc  IPv4.hpp  ipv4_test.cc
src/language_features/ipv4_range/: CMakeLists.txt  IPv4.cc  IPv4.hpp  ipv4_range_test.cc
src/language_features/matrix/: CmakeLists.txt  Matrix.hpp  matrix_test.cc
src/language_features/min_function/: CMakeLists.txt  min_test.cc
src/language_features/sys_handle_wrapper/: CMakeLists.txt  shw_test.cc  sys_handle_wrapper.hpp
src/language_features/temp_literals/: CMakeLists.txt  temp_literals.hpp  temp_literals_test.cc
src/math_problems/: abundant_numbers.cc  amicable_numbers.cc  armstrong_numbers.cc  gcd.cc  gray_code.cc  isbn_validation.cc  largest_collatz_sequence.cc  largest_prime.cc  lcm.cc  numerical_to_roman.cc  prime_factors.cc  sexy_prime_numbers.cc  sum_of_divisible_naturals.cc  value_of_pi.cc
src/streams_and_filesystems/directory_size/: CMakeLists.txt  main.cc
src/streams_and_filesystems/pascals_triangle/: CMakeLists.txt  main.cc
src/streams_and_filesystems/processes_table/: CMakeLists.txt  main.cc
src/streams_and_filesystems/removing_empty_lines/: CMakeLists.txt  main.cc
src/strings_and_regexp/binary_to_string/: CMakeLists.txt  binary_to_string.cc
src/strings_and_regexp/capitalize/: CMakeLists.txt  capitalize.cc
static/removing_empty_lines/: test.txt  test_trimmed.txt
(+17 files in other folders)
